# easy-serialize

./: .gitignore  LICENSE  demo.py  make.sh  pylama.ini  readme.md  setup.cfg  test_pypi.sh
easy_serialize/: __init__.py  serialize.py
easy_serialize.egg-info/: SOURCES.txt
tests/: custom_test.py  serialize_test.py
