[metadata]
name = easy-serialize
version = 0.0.1
author = Example Author
author_email = hydrogen31415@gmail.com
description = A simple way to turn objects into strings and vice-versa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hydrogen602/easy-serialize
project_urls =
    Bug Tracker = https://github.com/hydrogen602/easy-serialize/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
 = easy_serialize
packages = find:
python_requires = >=3.6

[options.packages.find]
where = easy_serialize