[metadata]
name = easy-serialize
version = 0.0.3
author = Jonathan Rotter
author_email = hydrogen31415@gmail.com
description = A simple way to turn objects into strings and vice-versa
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/hydrogen602/easy-serialize
project_urls =
    Bug Tracker = https://github.com/hydrogen602/easy-serialize/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[easy_install]
zip_ok = false
